# titan-infinity

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  do_migration.ps1  docker-compose.yml  migrate_smart.ps1  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
cron/: crontab.conf  deep_verify.sh  docker_cleanup.sh  hourly_agent.sh  log_rotate.sh  self_upgrade.sh  startup_check.sh  system_health.sh  verify_c_drive.sh
docker/: README.md  docker-compose.yml
docker/.github/workflows/: docker-infra.yml
docker/elasticsearch/data/_state/: _14.cfe  _14.cfs  _14.si  node-0.st  segments_18
docker/elasticsearch/data/snapshot_cache/: segments_1
docker/grafana/data/: grafana.db
docker/ollama/models/: id_ed25519  id_ed25519.pub
docker/postgres/data/pgdata/: postmaster.pid
docker/postgres/data/pgdata/base/1/: 2619  2619_vm  2696  2840  2841  pg_internal.init
docker/postgres/data/pgdata/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  2579  2606  2606_fsm  2606_vm  2608  2608_fsm  2608_vm  2610  2610_fsm  2610_vm  2619  2656  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002
docker/postgres/data/pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
docker/prometheus/: prometheus.yml
docker/prometheus/data/wal/: 00000000
docker/rabbitmq/data/: .erlang.cookie
docker/rabbitmq/data/mnesia/rabbit@a1ea760a2379/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCL  rabbit_runtime_parameters.DCL  rabbit_user.DCL  rabbit_user_permission.DCL  rabbit_vhost.DCL
docker/redis/data/appendonlydir/: appendonly.aof.1.base.rdb
obsidian-vault/: Home.md
obsidian-vault/.obsidian/: app.json
obsidian-vault/02-Agents/agenticops/: agenticops.md
obsidian-vault/02-Agents/automation-engineer/: automation-engineer.md
obsidian-vault/02-Agents/developer/: developer.md
obsidian-vault/02-Agents/hermes-ops/: hermes-ops.md
obsidian-vault/02-Agents/quantum-scientist/: quantum-scientist.md
obsidian-vault/02-Agents/researcher/: researcher.md
obsidian-vault/04-Infrastructure/: system-overview.md
obsidian-vault/Templates/: Daily.md
tests/: test_placeholder.py
workspace/: AGENTS.md  AGENT_MEMORY.md  AGENT_OS.md  Hermes_System_Health_Report.md  README.md  SYSTEM_STATUS.md
workspace/scripts/: youtube_learn.sh  youtube_master.py
(+6 files in other folders)
